# spotifyatlas

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/: .gitignore
src/spotifyatlas/: __init__.py  baseapi.py  datastructs.py  enums.py  spotifyapi.py
src/spotifyatlas/resources/: redirectpage.html
src/spotifyatlas/utils/: utils.py
tests/: main.py  test_datastructs.py  test_spotifyapi.py
